# trajopt

./: .gitignore  LICENSE  README.md  clean.sh  setup.py
examples/bspilqr/: car.py  lightdark.py
examples/elqr/: lqr.py  pendulum.py
examples/gps/: lqr.py  mb_cartpole.py  mb_cartpole_parallel.py  mb_doublecartpole.py  mb_lqr.py  mb_pendulum.py  mb_pendulum_parallel.py  mb_qube.py  mf_lqr.py  mf_pendulum.py  pendulum.py
examples/gps/analytical/: mb_cartpole.py  mb_pendulum.py  (+1 more)
examples/ilqg/: cartpole.py  doublecartpole.py  lqr.py  mb_cartpole.py  mb_doublecartpole.py  mb_lqr.py  mb_pendulum.py  pendulum.py
examples/ilqr/: cartpole.py  doublecartpole.py  lqr.py  pendulum.py  pendulum_parallel.py  qcartpole.py  qube.py
examples/rgps/: lrgps_mbgps.py  mb_lqr.py  mb_robot.py  mf_lqr.py  mf_pendulum.py  mf_pendulum_parallel.py
examples/riccati/: lqr.py
examples/robust_gps/: mf_lqr.py
gps/: README.md  setup.py
gps/examples/: lqr.py  pendulum.py
gps/gps/: __init__.py  mbgps.py  mfgps.py
gps/tests/: arma_test.py
tests/: arma_test.py
trajopt/: __init__.py
trajopt/belief/: __init__.py
trajopt/bspilqr/: CMakeLists.txt  README.md  __init__.py  bspilqr.py  objects.py
trajopt/elqr/: __init__.py  elqr.py  objects.py
trajopt/envs/: __init__.py
trajopt/gps/: CMakeLists.txt  README.md  __init__.py  mbgps.py  mfgps.py  objects.py
trajopt/gps/envs/: __init__.py
trajopt/gps/envs/cartpole/: cartpole.py
trajopt/gps/envs/double_cartpole/: double_cartpole.py
trajopt/gps/envs/lqr/: lqr.py
trajopt/gps/envs/pendulum/: pendulum.py
trajopt/gps/src/: util.cpp
trajopt/ilqg/: __init__.py  ilqg.py  objects.py
trajopt/ilqr/: CMakeLists.txt  README.md  __init__.py  ilqr.py  objects.py
trajopt/ilqr/src/: util.cpp
trajopt/lqr/: __init__.py
trajopt/moto/: __init__.py
trajopt/mpc/: __init__.py  direct_multiple_shooting.py  direct_multiple_shooting_mpc.py  direct_single_shooting.py  mpc_example.py  multiple_point_rbf_activated_loss.py  nlp_building_blocks.py  qube_env.py  qube_mpc.py
trajopt/pi/: __init__.py
trajopt/rgps/: CMakeLists.txt  __init__.py  lrgps.py  mbrgps.py  mfrgps.py  objects.py
trajopt/riccati/: __init__.py  objects.py  riccati.py
trajopt/robust_gps/: CMakeLists.txt  __init__.py  mbgps.py  mfgps.py  objects.py
trajopt/trees/: __init__.py
(+61 files in other folders)
